# libcell1.0

./: Alexandrov.cell  CMakeLists.txt  README.md  bull1.m  bull10.m  bull11.m  bull12.m  bull13.m  bull14.m  bull2.m  bull3.m  bull4.m  bull5.m  bull6.m  bull7.m  bull8.m  bull9.m  bunny.cell  colorface.m  convex_subdivision.cell  cscope.files  cscope.in.out  curve.cell  delauny_subdivision.cell  delauny_subdivision2.cell  delauny_subdivision3.cell  delauny_subdivision4.cell  dual_topo_mesh.cell  hax.cell  out_mesh.cell  out_mesh_adjust.cell  re_mesh.cell  re_mesh_adjust.cell  surface.cell
Demo/: main.cpp
include/Algorithm/: Algorithm.cpp  Algorithm1.h  Algorithm2.h  Conformal.h  Harmonic.h  Harmonic1.h
include/Mesh/: Cell_Traits.h  Mesh.h  Mesh_Frame.h  _Func_.h  lib_cell_Iterator.h
include/Mesh_IO/: Mesh_IO.h
include/tool/: libcell_kd_node_iterator.h  libcell_octree_iterator.h  libcell_tools_kd_node.h  libcell_tools_octree.h  libcell_tools_view.h  tools_algrithm.h  tools_formats.h
src/: CMakeLists.txt  FindLIBCELL.cmake
src/Mesh/: Cell_Traits.c  Mesh_Frame.c  _Func_.cpp  lib_cell_Iterator.cpp
src/Mesh_IO/: Mesh_IO.cpp
src/tool/: libcell_kd_node_iterator.cpp  libcell_octree_iterator.cpp  libcell_tools_kd_node.cpp  libcell_tools_octree.cpp  libcell_tools_view.cpp
